--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,8 @@
 *, *::before, *::after {
     box-sizing: border-box;
     user-select: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
 }
 
 body {
@@ -16,6 +18,7 @@ body {
     position: relative;
     width: 100%;
     height: 200px;
+    color: #535353;
 }
 
 .score {
@@ -48,9 +51,9 @@ body {
 .dino {
     --bottom: 0;
     position: absolute;
-    left: 1%;
+    left: 10%;
     height: 30%;
-    bottom: calc(var(--bottom) * 1%);
+    bottom: calc(var(--bottom) * 1%); 
 }
 
 .cactus {
